Fix form view on small height devices #2

--- a/src/assets/styles/pages/accueil/components/_accueil-hero.scss
+++ b/src/assets/styles/pages/accueil/components/_accueil-hero.scss
@@ -18,6 +18,11 @@
     @media (max-width: $lg-break) {
       flex-wrap: wrap;
     }
+    
+    .accueil-hero .accueil-hero-container > div:first-child {
+      padding: 0;
+      margin: auto;
+    }
   }
 
   .accueil-hero-text {
